2010-11-11  John W. Eaton  <jwe@octave.org>

	* Array.cc (Array<T>::cat): New special case for concatenating
	empty matrices.  Bug #31615.

2010-11-11  John W. Eaton  <jwe@octave.org>

	* lo-mappers.cc (xtrunc, xround): Move definitions here from
	lo-mappers.h.

2010-11-10  John W. Eaton  <jwe@octave.org>

	* kpse-xfns.c: Delete.
	* kpse-xfns.h: Delete.  Move defintions to kpse.cc.
	* Makefile.am (INCS): Remove kpse-xfns.h from the list.
	(LIBOCT_PATHSEARCH_SOURCES): Define to pathsearch.cc.
	(LIBOCT_PATHSEARCH_CXX_SOURCES,	LIBOCT_PATHSEARCH_C_SOURCES):
	Delete variables.

2010-11-10  John W. Eaton  <jwe@octave.org>

	* lo-cieee.c Eliminate special cases for SCO.

2010-11-10  John W. Eaton  <jwe@octave.org>

	* lo-ieee.cc (octave_ieee_init): Don't initialize octave_Inf,
	octave_NaN, and octave_NA to DBL_MAX.  Don't initialize
	octave_Float_Inf, octave_Float_NaN, and octave_Float_NA to FLT_MAX.
	(octave_ieee_init): Simplify using std::numeric_limits template.

2010-11-10  John W. Eaton  <jwe@octave.org>

	* syswait.h: Delete special cases for NeXT systems.

2010-11-10  John W. Eaton  <jwe@octave.org>

	* lo-sysdep.cc (octave_chdir): Delete special case for __EMX__.
	* oct-env.cc (octave_env::do_make_absolute): Likewise.

2010-11-10  John W. Eaton  <jwe@octave.org>

	* lo-ieee.h: Eliminate special cases for SCO.
	* lo-ieee.cc (octave_ieee_init): Eliminate special cases for SCO.

2010-11-09  John W. Eaton  <jwe@octave.org>

	* lo-mappers.h (xmod, xrem): Don't copy sign if result is zero.

2010-11-09  John W. Eaton  <jwe@octave.org>

	* lo-mappers.cc, lo-mappers.h (xisnan, xisinf, xfinite, xmod,
	xrem, floor, ceil, xround, xroundb, signum): Move definitions
	from lo-mappers.cc to lo-mappers.h and convert to templates.
	(xtrunc): Move definitions from lo-mappers.cc to lo-mappers.h.
	* lo-mappers.cc (fix): Use xtrunc.  Move definitions to
	lo-mappers.cc from lo-mappers.h.
	(real, imag, conj) Move definitions to lo-mappers.h and declare inline.